# instagram-mcp

./: .env.example  .gitignore  LAUNCH.md  LICENSE  README.md  SECURITY.md  pyproject.toml  server.json
scripts/: smoke_test.py  test_insights.py
src/instagram_mcp/: __init__.py  __main__.py  client.py  config.py  server.py  token_manager.py
src/instagram_mcp/tools/: auth.py  comments.py  discovery.py  hashtags.py  insights.py  media.py  messaging.py  publish.py
tests/: conftest.py  test_combinations.py  test_token_manager.py  test_tools.py
