[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "instagram-mcp"
version = "0.1.0"
description = "MCP server for the Instagram Platform API (Instagram Login flow, no Facebook Page required)"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "William Gao" },
]
keywords = [
    "mcp",
    "model-context-protocol",
    "instagram",
    "instagram-api",
    "instagram-login",
    "claude",
    "ai",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "respx>=0.21.0",
]

[project.scripts]
instagram-mcp = "instagram_mcp.__main__:main"

[project.urls]
Homepage = "https://github.com/williamgao/instagram-mcp"
Issues = "https://github.com/williamgao/instagram-mcp/issues"
Repository = "https://github.com/williamgao/instagram-mcp"

[tool.hatch.build.targets.wheel]
packages = ["src/instagram_mcp"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
